--- a/index.html
+++ b/index.html
@@ -98,10 +98,25 @@
     </div>
   </div>
 
-  <div class="aboutUs">
+  <!-- <div class="aboutUs">
     <h1 class="aboutUsHeader">Recruitment</h1>
     <div class="aboutDiv"> </div>
+  </div> -->
+<div class="small-banner">
+  <h1 class="small-banner-text">Recruitment</h1>
+  <div class="rectangle-banner">
+    <div>
+      <p>ΠΚΑ</p>
+      <hr>
+      <p style="font-size:35px;margin-top:2px;">RUSH PIKE</p>
+    </div>
   </div>
+</div>
+
+
+
+
+
   <iframe id="rushVideo" src="https://www.youtube.com/embed/8n1Y72HBtak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div class="panel">
     <div class="panel-inner-container">
