updated mobile version & restyled 'about' banner

--- a/index.html
+++ b/index.html
@@ -113,10 +113,6 @@
   </div>
 </div>
 
-
-
-
-
   <iframe id="rushVideo" src="https://www.youtube.com/embed/8n1Y72HBtak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div class="panel">
     <div class="panel-inner-container">
@@ -156,10 +152,12 @@
     </div>
   </div>
 
-
+  <div class="tiny-banner">
+    <h1>ABOUT US</h1>
+  </div>
   <div class="aboutUs">
-    <h1 class="aboutUsHeader">About Us</h1>
-    <div class="aboutDiv"> </div>
+    <!-- <h1 class="aboutUsHeader">About Us</h1>
+    <div class="aboutDiv"> </div> -->
     <p class="text"> In 1868, six men met in secret at the University of Virginia and formed what would turn out to be one of the largest and most beloved fraternities in America. Today, our men continue the traditions set fourth by our founders by showing intellect, sportsmanship, leadership, and chivalry.   </p>
     <p class="text">The Gamma Omicron chapter of Pi Kappa Alpha has been a staple fraternity at Ohio University since it was first colonized back in 1930. Now in 2017, after being away for a few years, Pi Kappa Alpha is back and ready to make a name for ourselves in Athens again. Within our first semester back, we are already over 70 brothers strong and are becoming a staple participant in the Greek life community on campus.</p>
     <p class="text">We are eager to show off what makes Pi Kappa Alpha such an unique fraternity.
