uploaded imgs into cdn & got 'counter.js' to work

--- a/colony.html
+++ b/colony.html
@@ -52,56 +52,56 @@
 <section class="exec-container">
   <div class="exec-photos">
     <div class="exec-profile">
-        <img src="imgs/execs1.png" alt="charlie">
+        <img src="https://res.cloudinary.com/slickchris33/image/upload/v1545729448/execs1.png" alt="Hector Cordero">
         <figcaption>
           <p><strong>PRESIDENT</strong></p>
           <p>Hector Cordero</p>
         </figcaption>
     </div>
     <div class="exec-profile">
-        <img src="imgs/execs2.png" alt="charlie">
+        <img src="https://res.cloudinary.com/slickchris33/image/upload/v1545729451/execs2.png" alt="Andrew Regalado">
         <figcaption>
           <p><strong>EXTERNAL VICE PRESIDENT</strong></p>
           <p>Andrew Regalado</p>
         </figcaption>
     </div>
     <div class="exec-profile">
-        <img src="imgs/execs3.png" alt="charlie">
+        <img src="https://res.cloudinary.com/slickchris33/image/upload/v1545729460/execs3.png" alt="Manuel Alejo">
         <figcaption>
           <p><strong>INTERNAL VICE PRESIDENT</strong></p>
-          <p>Meme Alejo</p>
+          <p>Manuel Alejo</p>
         </figcaption>
     </div>
     <div class="exec-profile">
-        <img src="imgs/execs4.png" alt="charlie">
+        <img src="https://res.cloudinary.com/slickchris33/image/upload/v1545729467/execs4.png" alt="Angel Mendoza">
         <figcaption>
           <p><strong>SECRETARY</strong></p>
           <p>Angel Mendoza</p>
         </figcaption>
     </div>
     <div class="exec-profile">
-        <img src="imgs/execs1.png" alt="charlie">
+        <img src="https://res.cloudinary.com/slickchris33/image/upload/v1545729448/execs1.png" alt="Lonnie Duran">
         <figcaption>
           <p><strong>SEREANT AT ARMS</strong></p>
           <p>Lonnie Duran</p>
         </figcaption>
     </div>
     <div class="exec-profile">
-        <img src="imgs/execs6.png" alt="charlie">
+        <img src="https://res.cloudinary.com/slickchris33/image/upload/v1545729474/execs6.png" alt="Collier Wakefield">
         <figcaption>
           <p><strong>TREASURER</strong></p>
           <p>Collier Wakefield</p>
         </figcaption>
     </div>
     <div class="exec-profile">
-        <img src="imgs/execs1.png" alt="charlie">
+        <img src="https://res.cloudinary.com/slickchris33/image/upload/v1545729448/execs1.png" alt="charlie">
         <figcaption>
           <p><strong>MEMBERSHIP VICE PRESIDENT</strong></p>
           <p>Broderick Doyon</p>
         </figcaption>
     </div>
     <div class="exec-profile">
-        <img src="imgs/execs8.png" alt="charlie">
+        <img src="https://res.cloudinary.com/slickchris33/image/upload/v1545729480/execs8.png" alt="Matthew Howe">
         <figcaption>
           <p><strong>RECRUITMENT CHAIRMAN</strong></p>
           <p>Matthew Howe</p>
