--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="fourPillars">
     <div class="pillar-container">
       <div class="service-wrapper">
-        <div><img class="pillarImg"src="imgs/scholar.jpg" alt=""></div>
+        <div><img class="pillarImg"src="https://res.cloudinary.com/slickchris33/image/upload/v1545729501/scholar_e3lr9x.jpg" alt=""></div>
         <div class="service-wrapper-inner">
           <h2 class="slag">Scholars</h2>
           <div class="description">
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="service-wrapper">
-        <div><img class="pillarImg"src="imgs/leader.png" alt=""></div>
+        <div><img class="pillarImg"src="https://res.cloudinary.com/slickchris33/image/upload/v1545729494/leader_ssussl.png" alt=""></div>
         <div class="service-wrapper-inner">
           <h2 class="slag">Leader</h2>
           <div class="description">
@@ -75,7 +75,7 @@
         </div>
       </div>
       <div class="service-wrapper">
-        <div><img class="pillarImg"src="imgs/athlete.jpg" alt=""></div>
+        <div><img class="pillarImg"src="https://res.cloudinary.com/slickchris33/image/upload/v1545729426/athlete_wcs5jp.jpg" alt=""></div>
         <div class="service-wrapper-inner">
           <h2 class="slag">Athetes</h2>
           <div class="description">
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="service-wrapper">
-        <div><img class="pillarImg"src="imgs/gentleman.jpg" draggable="true" alt=""></div>
+        <div><img class="pillarImg"src="https://res.cloudinary.com/slickchris33/image/upload/v1545729488/gentleman_yct1zf.jpg" alt=""></div>
         <div class="service-wrapper-inner">
           <h2 class="slag">Gentlemen</h2>
           <div class="description">
@@ -205,33 +205,67 @@
   <p>Copyright &copy;	CSUSB Pi Kappa Alpha</p>
 </div>
   <script src="countUp.js"></script>
-  <script>
-    var options = {
-      useEasing: true,
-      useGrouping: true,
-      seperator: ',',
-      decimal: '.',
-    };
+<script>
+//get the element to animate
+var panel = document.getElementsByClassName('panel-stat');
+var panelHeight = panel.clientHeight;
 
-    var gpa = new CountUp('gpa-num',0,3.4,2,5,options);
+//listen for scroll event and call animate function
+document.addEventListener('scroll',count);
+//check if element is in view
+function inView(){
+  //get window height
+  var windowHeight = window.innerHeight;
+  // get number of pixels that the document is scrolled
+  var scrollY = window.scrollY || window.pageYOffset;
+  //get current scroll position
+  //(distance from the top of the page to the bottom of the current viewport)
+  var elementPosition = panel.getBoundingClientRect().top + scrollY + panelHeight;
+  // is scroll position greater than element position?
+  // (is element in view?)
+  if(scrollPosition > elementPosition){
+    return true;
+  }
+  return false;
+}
+//animate element when it is in view
+function animate(){
+  //is element in view?
+  if(inView()){
+    //element is in view, call count
+    count();
+  }
+}
 
-    if(!gpa.error){
-      gpa.start();
-    }else{
-      console.error(gpa.error);
-    }
-    var donations = new CountUp('involvement-num',0,100,0,5,options);
-    if(!donations.error){
-      donations.start();
-    }else{
-      console.error(donations.error);
-    }
-    var donations = new CountUp('donations-num',0,5000,0,5,options);
-    if(!donations.error){
-      donations.start();
-    }else{
-      console.error(donations.error);
-    }
+
+function count() {
+  var options = {
+    useEasing: true,
+    useGrouping: true,
+    seperator: ',',
+    decimal: '.',
+};
+
+  var gpa = new CountUp('gpa-num',0,3.4,1,3,options);
+
+  if(!gpa.error){
+    gpa.start();
+  }else{
+    console.error(gpa.error);
+  }
+  var donations = new CountUp('involvement-num',0,100,0,3,options);
+  if(!donations.error){
+    donations.start();
+  }else{
+    console.error(donations.error);
+  }
+  var donations = new CountUp('donations-num',0,5000,0,3,options);
+  if(!donations.error){
+    donations.start();
+  }else{
+    console.error(donations.error);
+  }
+}
   </script>
   <script src="js/script.js" charset="utf-8"></script>
 </body>
