updated pictures & sstarted dropdown menu

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="index.html"><li>Home</li></a>
             <a href="colony.html"><li>Colony</li></a>
             <a href="contact.html"><li>Contact</li></a>
+            <a href="test.html"><li>Test</li></a>
           </ul>
         </div>
 
@@ -35,6 +36,7 @@
             <li class="home"><a href="index.html">Home</a></li>
             <li class="colony space"><a class="a" href="colony.html">Colony</a></li>
             <li class="contact-link space"><a href="contact.html">Contact</a></li>
+            <li><a href="test.html">Test</a></li>
           </ul>
         </div>
   </div>
@@ -65,7 +67,7 @@
         </div>
       </div>
       <div class="service-wrapper">
-        <div><img class="pillarImg"src="imgs/leader.png" alt="Pike Leader"></div>
+        <div><img class="pillarImg" src="imgs/leader.jpg" alt="Pike Leader"></div>
         <div class="service-wrapper-inner">
           <h2 class="slag">Leader</h2>
           <div class="description">
@@ -75,7 +77,7 @@
         </div>
       </div>
       <div class="service-wrapper">
-        <div><img class="pillarImg"src="imgs/athlete.jpg" alt="Pike Athletes"></div>
+        <div><img class="pillarImg" src="imgs/athlete.jpg" alt="Pike Athletes"></div>
         <div class="service-wrapper-inner">
           <h2 class="slag">Athetes</h2>
           <div class="description">
@@ -84,7 +86,7 @@
         </div>
       </div>
       <div class="service-wrapper">
-        <div><img class="pillarImg"src="imgs/gentleman.jpg"></div>
+        <div><img class="pillarImg" alt="gentleman" src="imgs/gentleman.jpg"></div>
         <div class="service-wrapper-inner">
           <h2 class="slag">Gentlemen</h2>
           <div class="description">
@@ -160,15 +162,22 @@
   <div class="aboutUs">
     <!-- <h1 class="aboutUsHeader">About Us</h1>
     <div class="aboutDiv"> </div> -->
-    <p class="text"> In 1868, six men met in secret at the University of Virginia and formed what would turn out to be one of the largest and most beloved fraternities in America. Today, our men continue the traditions set fourth by our founders by showing intellect, sportsmanship, leadership, and chivalry.   </p>
-    <p class="text">The Gamma Omicron chapter of Pi Kappa Alpha has been a staple fraternity at Ohio University since it was first colonized back in 1930. Now in 2017, after being away for a few years, Pi Kappa Alpha is back and ready to make a name for ourselves in Athens again. Within our first semester back, we are already over 70 brothers strong and are becoming a staple participant in the Greek life community on campus.</p>
+    <p class="text"> In 1868, six men met in secret at the University of Virginia and formed what would turn out to
+      be one of the largest and most beloved fraternities in America. Today, our men continue the traditions set forth
+      by our founders by showing intellect, sportsmanship, leadership, and chivalry.
+     </p>
+    <p class="text">The Cal State San Bernardino Colony has made its mark in January of 2017.Now in 2019, after a
+      couple of quarters, Pi Kappa Alpha is back and ready to make a name for ourselves in San Bernardino again.
+      This winter quarter, we are already over 30 brothers strong and are becoming a staple participant in the Greek
+       life community on campus.
+    </p>
     <p class="text">We are eager to show off what makes Pi Kappa Alpha such an unique fraternity.
-
+</p>
     <figure class="coatOfArms-container">
         <img class="pillarImg" id="coatOfArms" src="imgs/pikeLogo.jpg" alt="Pi Kappa Alpha Coat of Arms">
     </figure>
 
-</p>
+
 </div>
   <!-- <p id="hash">#CSUSBPIKE</p> -->
 <div class="footer">
@@ -267,6 +276,6 @@ function count() {
   }
 }
   </script>
-  <script src="js/script.js" charset="utf-8"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
