added comments to html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div id="overlay"></div>
   <div id='menu-container'>
+    <!-- Menu for laptop view -->
     <div class='menu'>
         <a href="index.html"><div class="logo"><span><span id="csusb">CSUSB</span> PIKE</span></div></a>
         <div id="menuToggle">
@@ -26,21 +27,22 @@
             <a href="index.html"><li>Home</li></a>
             <a href="colony.html"><li>Colony</li></a>
             <a href="contact.html"><li>Contact</li></a>
-            <a href="test.html"><li>Test</li></a>
+            <!-- <a href="test.html"><li>Test</li></a> -->
           </ul>
         </div>
 
 
-
+          <!-- Menu for mobile  -->
           <ul class="links">
             <li class="home"><a href="index.html">Home</a></li>
             <li class="colony space"><a class="a" href="colony.html">Colony</a></li>
             <li class="contact-link space"><a href="contact.html">Contact</a></li>
-            <li><a href="test.html">Test</a></li>
+            <!-- <li><a href="test.html">Test</a></li> -->
           </ul>
         </div>
   </div>
 
+  <!-- Hero image -->
   <section class="hero">
     <div class="hero-inner">
       <h1>Pi Kappa Alpha</h1>
@@ -53,7 +55,7 @@
       foundation of all lasting association, and we will seek wisdom and knowledge
       while serving others in modesty and dignity. </p>
 
-
+<!-- fourpillar images -->
   <div class="fourPillars">
     <div class="pillar-container">
       <div class="service-wrapper">
@@ -114,8 +116,10 @@
     </div>
   </div>
 </div>
-
+  <!-- video -->
   <iframe id="rushVideo" src="https://www.youtube.com/embed/8n1Y72HBtak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  <!-- icon panel -->
   <div class="panel">
     <div class="panel-inner-container">
       <div class="panel-item">
@@ -156,12 +160,11 @@
     </div>
   </div>
 
+<!-- About us banner -->
   <div class="tiny-banner">
     <h1>ABOUT US</h1>
   </div>
   <div class="aboutUs">
-    <!-- <h1 class="aboutUsHeader">About Us</h1>
-    <div class="aboutDiv"> </div> -->
     <p class="text"> In 1868, six men met in secret at the University of Virginia and formed what would turn out to
       be one of the largest and most beloved fraternities in America. Today, our men continue the traditions set forth
       by our founders by showing intellect, sportsmanship, leadership, and chivalry.
@@ -179,7 +182,6 @@
 
 
 </div>
-  <!-- <p id="hash">#CSUSBPIKE</p> -->
 <div class="footer">
     <div class="social-container">
       <div class="coyote">
@@ -239,8 +241,9 @@ function inView(){
 }
 //animate element when it is in view
 function animate(){
+  var counter = 0;
   //is element in view?
-  if(inView()){
+  if(inView() && counter === 0){
     //element is in view, call count
     count();
   }
